@@ -4,6 +4,9 @@ GNU grep NEWS                                    -*- outline -*-
 
 ** Improvements
 
+  grep now makes cache transition from a state with dot expression to
+  speed up matches in non-UTF8 multibyte locales.
+
   grep can be much faster now when standard output is /dev/null.
 
   grep -F is now typically much faster when many patterns are given,
